Rewrite sources to java 8 for now