@@ -2,13 +2,18 @@ package com.varlanv.testkonvence.info;
 
 import lombok.SneakyThrows;
 import lombok.Value;
+import lombok.val;
+import lombok.var;
 
 import javax.xml.parsers.DocumentBuilderFactory;
+import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @Value
@@ -22,25 +27,37 @@ public class XmlEnforceMeta {
     }
 
     @SneakyThrows
+    private byte[] readAllBytes(InputStream is) {
+        try (val bis = new BufferedInputStream(is)) {
+            val out = new ByteArrayOutputStream();
+            int i;
+            while ((i = bis.read()) != -1) {
+                out.write(i);
+            }
+            return out.toByteArray();
+        }
+    }
+
+    @SneakyThrows
     public List<EnforcementMeta.Item> items(InputStream inputStream) {
-        var bas = new ByteArrayInputStream(inputStream.readAllBytes());
-        var bytes = bas.readAllBytes();
+        val bas = new ByteArrayInputStream(readAllBytes(inputStream));
+        val bytes = readAllBytes(bas);
 
         if (bytes.length == 0) {
-            return List.of();
+            return Collections.emptyList();
         }
-        var builder = DocumentBuilderFactory.newInstance().newDocumentBuilder();
-        var document = builder.parse(new ByteArrayInputStream(bytes));
-        var root = document.getFirstChild();
+        val builder = DocumentBuilderFactory.newInstance().newDocumentBuilder();
+        val document = builder.parse(new ByteArrayInputStream(bytes));
+        val root = document.getFirstChild();
         if (root == null) {
-            return List.of();
+            return Collections.emptyList();
         }
-        var entries = root.getChildNodes();
-        var entriesLen = entries.getLength();
-        var entriesList = new ArrayList<EnforcementMeta.Item>(entriesLen);
+        val entries = root.getChildNodes();
+        val entriesLen = entries.getLength();
+        val entriesList = new ArrayList<EnforcementMeta.Item>(entriesLen);
         for (var entryIdx = 0; entryIdx < entriesLen; entryIdx++) {
-            var entryNode = entries.item(entryIdx);
-            var fields = entryNode.getChildNodes();
+            val entryNode = entries.item(entryIdx);
+            val fields = entryNode.getChildNodes();
             entriesList.add(
                 new EnforcementMeta.Item(
                     fields.item(0).getTextContent(),
