@@ -2,6 +2,7 @@ package com.varlanv.testkonvence;
 
 import com.varlanv.testkonvence.info.XmlEnforceMeta;
 import lombok.RequiredArgsConstructor;
+import lombok.val;
 
 import java.io.File;
 import java.nio.file.Files;
@@ -9,6 +10,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class Train {
@@ -18,16 +20,16 @@ public class Train {
     Collection<Path> sources;
 
     public void run() {
-        var items = new XmlEnforceMeta().items(resultXml);
-        var sourcesRootPath = sourcesRoot.toAbsolutePath().toString();
-        var subject = new SourceReplacementTrain(
+        val items = new XmlEnforceMeta().items(resultXml);
+        val sourcesRootPath = sourcesRoot.toAbsolutePath().toString();
+        val subject = new SourceReplacementTrain(
             new EnforcementMeta(
                 items.stream().map(item -> {
-                        var sourceFile = Paths.get(sourcesRootPath + File.separator + item.fullEnclosingClassName().replace(".", File.separator));
+                        val sourceFile = Paths.get(sourcesRootPath + File.separator + item.fullEnclosingClassName().replace(".", File.separator));
                         if (Files.exists(sourceFile) && Files.isRegularFile(sourceFile)) {
                             EnforceCandidate candidate;
-                            var classNameParts = item.className().split("\\.");
-                            var className = classNameParts[classNameParts.length - 1];
+                            val classNameParts = item.className().split("\\.");
+                            val className = classNameParts[classNameParts.length - 1];
                             if (item.methodName().isEmpty()) {
                                 candidate = new ClassNameFromDisplayName(item.displayName(), className);
                             } else {
@@ -45,8 +47,7 @@ public class Train {
                     })
                     .filter(Optional::isPresent)
                     .map(Optional::get)
-                    .toList()
-            )
+                    .collect(Collectors.toList()))
         );
         subject.run();
     }
